--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <h2>Compétences</h2>
 
-            <table width="80%">
+            <table width="90%">
                 <thead>
                     <tr>
                         <th>Software</th>
@@ -145,7 +145,7 @@
                     </tr>
                     <tr>
                         <td>Python</td>
-                        <td></td>
+                        <td>Montage</td>
                         <td>Calibrage</td>
                     </tr>
                 </tbody>
